tests/error/find_type.gw
#! [contains] unknown type
class C extends UGen {
  D d;
}
